app/styles/pages/home.less
#home {
    a {
        cursor: pointer !important;
        transition: color .35s ease;
    }
    img {
        width: inherit;
        vertical-align: middle;
    }
    input, textarea {
        color: @text-color-normal;
        border: none;
        outline: none;
    }
    button, .button {
        display: inline-block;
        z-index: 1;
        padding: 0 1em;
        padding-top: .15em; // Bugfix
        font-family: "ITC Avant Garde Std", sans-serif;
        font-size: 1.1em;
        line-height: 2em;
        text-decoration: none;
        text-transform: lowercase;
        letter-spacing: -.035em;
        border: none;
        background-color: transparent;
        outline: none;
        cursor: pointer !important;
        transition: opacity .5s ease;
        a {
            color: white;
        }
    }
    button[disabled], button[disabled="true"] {
        opacity: .25;
        cursor: not-allowed !important;
    }
    .container {
        width: 75%;
        margin: 0 auto;
    }
    .headline {
        & + p {
            width: 75%;
            margin: 1.25em auto 0 auto;
            font-size: 1.1em;
            line-height: 1.35em;
            & + button, & + .button {
                display: inline-block;
                width: auto;
                margin-top: 1.5em;
                .background-color-states(@secondary-color);
            }
        }
    }
    header {
        padding-top: 1em;
        padding-bottom: 6em;
        text-align: center;
        background-image: linear-gradient(0deg, fade(@default-color, 7.5%) 0%, white 50%);
        &.hero {
            display: block;
            position: relative;
            margin: 0 auto;
            margin-bottom: .5em;
            padding-top: 1em;
            .headline {
              position: relative;
                z-index: 2;
                margin-top: -.75em;
            }

        }
    }
    main {
        padding-bottom: 4em;
        .separator {
            display: block;
            width: 65%;
            margin: 5em auto;
        }
        section {
            height: auto;
            text-align: center;
            &::after {
                content: '';
                display: block;
                clear: both;
            }
            &.introduction {
                margin-top: -4em;
                .preview {
                    overflow: hidden;
                    box-sizing: content-box;
                    width: 75%;
                    margin: 0 auto;
                    border: .5em solid white;
                    border-radius: 1em;
                    background-color: white;
                    .box-shadow(0 .25em .5em fade(black, 7.5%));
                    .slider {
                        padding-bottom: 50%;
                        img {
                            width: 100%;
                        }
                    }
                }
            }
            &.information {
                ul {
                    width: 100%;
                    margin: 0;
                    .clearfix;
                    li {
                        float: left;
                        width: 48%;
                        margin-top: 4%;
                        margin-right: 4%;
                        text-align: left;
                        list-style: none;
                        &:nth-child(even) {
                            margin-right: 0;
                        }
                        b {
                            color: @secondary-color;
                        }
                        p {
                            line-height: 1.5em;
                        }
                    }
                }
            }
            &.promotion {
                position: relative;
                text-align: center;
                margin-top: 5em;
            }
            /*
            &.promotion {
                position: relative;
                margin-top: 8.5em;
                padding: 4em 0;
                text-align: center;
                background-image: linear-gradient(rgb(158, 119, 255) 0%, rgb(93, 60, 246) 100%);
                &::before {
                    content: "";
                    display: block;
                    top: -8.5em;
                    left: 50%;
                    width: 7.5em;
                    height: 8.5em;
                    margin-left: -3.75em;
                    background-image: url(https://res.cloudinary.com/graphjs/image/upload/graphjs.com/identity/graphjs-mascot.png);
                    background-position: top center;
                    background-size: cover;
                    position: absolute;
                    z-index: 1;
                }
                h2 {
                    color: white;
                    margin-bottom: .25em;
                }
                p {
                    color: white;
                    font-size: 1.2em;
                    line-height: 125%;
                }
                button {
                    width: auto;
                    .text-color-states(@primary-color);
                    background-color: white;
                    .box-shadow(0 .25em .25em fade(black, 15%));
                    .transition(all .35s ease);
                    &:hover {
                        .box-shadow(0 .5em .5em fade(black, 15%));
                    }
                }
            }
            */
            &.indication {
                padding: 0;
                .brand {
                    width: 15em;
                    margin: 0 auto;
                    .logo {
                        width: 87.5%;
                        margin-right: 12.5%;
                    }
                    p {
                        margin-top: -1.3em;
                        margin-left: 2.5em;
                        color: rgb(158, 119, 255);
                        font-family: "Selphia Script", sans-serif;
                        font-weight: normal;
                        font-size: calc(1.3em - 1px); //1px is required to solve Edge bug
                        line-height: 67%;
                        -webkit-transform: rotate(-2deg);
                        -moz-transform: rotate(-2deg);
                        -ms-transform: rotate(-2deg);
                        -o-transform: rotate(-2deg);
                        transform: rotate(-2deg);
                    }
                }
                .note {
                    width: 55%;
                    margin: 0 auto;
                    margin-top: 4em;
                    text-align: left;
                    .clearfix;
                    & > * {
                        float: left;
                    }
                    .logo {
                        width: 3em;
                        height: 3em;
                    }
                    p {
                        width: calc(100% - 4em);
                        height: 3em;
                        margin: 0;
                        margin-left: 1em;
                        line-height: 1.5em;
                    }
                }
            }
            h3 {
                margin-bottom: 2em;
            }
        }
    }
}

/* Responsive Metrics */

/* Window Width < 480 */
@media only screen and (max-width: 479px) {
    #home {
        font-size: 13px;
        .container {
            width: 90%;
        }
        header {
            .hero {
                width: 100%;
                margin-top: .5em;
                margin-bottom: 1.5em;
            }
        }
        main {
            section {
                &.information {
                    margin-top: 3.5em;
                    margin-bottom: 0;
                    & > * {
                        width: 100% !important;
                        margin-left: 0 !important;
                        margin-right: 0 !important;
                        margin-bottom: 0 !important;
                        margin-bottom: 0 !important;
                        &:first-child {
                            margin-bottom: 2em !important;
                        }
                    }
                }
                &.indication {
                    .note {
                        width: 100%;
                    }
                }
            }
        }
    }
}

/* 480 ≤ Window Width < 768 */
@media only screen and (min-width: 480px) and (max-width: 767px) {
    #home {
        font-size: 14px;
        .container {
            width: 75%;
        }
        header {
            .hero {
                width: 90%;
                margin-top: .5em;
                margin-bottom: 1.5em;
            }
        }
        main {
            section {
                &.information {
                    margin-top: 3.5em;
                    margin-bottom: 0;
                    & > * {
                        width: 100% !important;
                        margin-left: 0 !important;
                        margin-right: 0 !important;
                        margin-bottom: 0 !important;
                        margin-bottom: 0 !important;
                        &:first-child {
                            margin-bottom: 2em !important;
                        }
                    }
                    & > .code {
                        h3 {
                            text-align: center !important;
                        }
                        .links {
                            a {
                                float: none !important;
                            }
                        }
                    }
                }
                &.indication {
                    .note {
                        width: 100%;
                    }
                }
            }
        }
    }
}

/* 768 ≤ Window Width < 1024 */
@media only screen and (min-width: 768px) and (max-width: 1023px) {
    #home {
        font-size: 15px;
        .container {
            width: 90%;
        }
        header {
            .hero {
                width: 80%;
                margin-top: .5em;
                margin-bottom: 1.5em;
            }
        }
    }
}

/* 1024 ≤ Window Width < 1152 */
@media only screen and (min-width: 1024px) and (max-width: 1151px) {
    #home {
        font-size: 16px;
        .container {
            width: 85%;
        }
    }
}

/* 1152 ≤ Window Width < 1280 */
@media only screen and (min-width: 1152px) and (max-width: 1280px) {
    #home {
        font-size: 17px;
        .container {
            width: 80%;
        }
    }
}

/* 1280 ≤ Window Width < 1440 */
@media only screen and (min-width: 1280px) and (max-width: 1439px) {
    #home {
        font-size: 18px;
        .container {
            width: 75%;
        }
    }
}

/* 1440 ≤ Window Width < 1680 */
@media only screen and (min-width: 1440px) and (max-width: 1679px) {
    #home {
        font-size: 19px;
    }
}

/* 1680 ≤ Window Width */
@media only screen and (min-width: 1680px) {
    #home {
        font-size: 20px;
    }
}

